# dimatech

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
alembic/: env.py
alembic/versions/: 0002_seed_test_data.py  dbf81ad03306_initial_migration.py  e7955adadc4d_add_signature_to_payments.py
app/: main.py
app/api/accounts/: exceptions.py  repository.py  router.py  schemas.py  service.py
app/api/auth/: exceptions.py  repository.py  router.py  schemas.py  service.py
app/api/globals/: exceptions.py  repository.py
app/api/payments/: exceptions.py  repository.py  router.py  schemas.py  service.py
app/api/users/: consts.py  exceptions.py  repository.py  router.py  schemas.py  service.py
app/core/: settings.py
app/core/database/: __init__.py
app/core/database/mixins/: timestamp.py
app/core/database/models/: __init__.py  account.py  payment.py  user.py
app/core/middleware/: __init__.py  auth_middleware.py  dependencies.py
app/core/security/: __init__.py  jwt_handler.py  signature.py
app/scripts/: gen_webhook_payload.py
