[tool.poetry]
name = "dimatech"
version = "0.1.0"
description = "FastAPI backend service"
authors = ["vladislav <zackieffv@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11"

fastapi = ">=0.110"
uvicorn = {extras = ["standard"], version = ">=0.27"}

sqlalchemy = ">=2.0"
asyncpg = ">=0.31.0,<0.32.0"
alembic = ">=1.13"

passlib = {extras = ["bcrypt"], version = ">=1.7"}
bcrypt = "<4.0"

pyjwt = ">=2.8"
pydantic-settings = ">=2.0"
psycopg2-binary = ">=2.9.11,<3.0.0"
pydantic = {extras = ["email"], version = "^2.12.5"}

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
  "black>=24.0.0,<25.0.0",
  "isort>=5.13.0,<6.0.0",
  "ruff>=0.6.2,<0.7.0"
]

[tool.black]
line-length = 88
target-version = ["py311"]
include = "app/"

[tool.isort]
profile = "black"
line_length = 88
src_paths = ["app"]

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["app"]

[tool.ruff.lint]
select = ["E", "F"]
ignore = []
